--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="col p-2 rounded-lg m-1">
       <% unless @page.body.blank? %>
-        <%= @page.body.html_safe %>
+        <%== Sanitize.fragment(@page.body, Sanitize::Config::RELAXED) %>
       <% end %>
     <%= link_to "edit", edit_page_path(@page), 
         data: { turbo: false }, class: "btn btn-sm btn-outline-danger" if admin_user? %>
