--- a/app/views/pages/_show_page.html.erb
+++ b/app/views/pages/_show_page.html.erb
@@ -4,7 +4,7 @@
 
     <div class="card-body text-dark">
       <% unless @page.body.blank? %>
-        <%#= @page.body.html_safe %>
+        <%# nosem: HTML is sanitized via Sanitize::Config::RELAXED %>
         <%== Sanitize.fragment(@page.body, Sanitize::Config::RELAXED) %>
       <% end %>
     </div>
