--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,7 @@
               <b class="text-brightred">MODEL NUMBER:</b> <%= @product.model_number %><br>
             </p>
             <p><%= number_to_currency(@product.price/100.0) %></p>
-            <%# nosem: HTML is sanitized via Sanitize::Config::RELAXED %>
+            <%# nosemgrep: HTML is sanitized via Sanitize::Config::RELAXED %>
             <p><%== Sanitize.fragment(@product.description, Sanitize::Config::RELAXED) %></p>
             <div class="btn-group">
               <% if @cart.include?(@product) %>
